--- a/mission_to_mars/templates/index.html
+++ b/mission_to_mars/templates/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mission to Mars</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    
 </head>
 
 <body>
@@ -66,5 +67,11 @@
 
       </div>
 </body>
-<footer> <small>&copy; Copyright {{2020}}, Mohammed Ahmed</small> </footer>
+<footer class="footer">
+    <div class="footerContainer">
+        <p class="copyright">copyright © Mohammed Ahmed 2020</p>
+    </div>
+</footer>
+
+
 </html>
